packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_eof_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      6
    ],
    "items": 6,
    "width": 26.48,
    "height": 18.0,
    "x": 0.0,
    "y": 0.0
  }
]
