packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_in_string_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 6,
    "width": 39.33,
    "height": 18.0,
    "x": 0.0,
    "y": 0.0
  }
]
