packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_in_string_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 9,
      "end": 10
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  }
]
