packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_nested_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      14
    ],
    "items": 6,
    "width": 69.61,
    "height": 18.97,
    "x": 0.0,
    "y": 0.0
  }
]
