packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_nested_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 13,
      "end": 14
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  }
]
