packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_quote_only_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 3,
      "end": 3
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  },
  {
    "range": {
      "start": 3,
      "end": 3
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
