packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_after_unclosed_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      12
    ],
    "items": 6,
    "width": 87.28,
    "height": 18.2,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      14,
      20
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 36.56
  }
]
