packages/engine/src/tests/snapshots/engine__tests__partition__broken_unknown_after_unclosed_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 12,
      "end": 13
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  },
  {
    "range": {
      "start": 2,
      "end": 12
    },
    "severity": "error",
    "message": "unknown variable: notdefined",
    "hints": [
      "if you meant to display multiple letters as is, try adding spaces between each letter: `n o t d e f i n e d`",
      "or if you meant to display this as text, try placing it in quotes: `\"notdefined\"`"
    ]
  }
]
